Bug 781422 - Give parameters defaults whenever they're undefined. r=jorendorff